--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>B</span>agus <span>R</span>amadhan</h1>
+            <h1><span>B</span>agus <span>R</span>amadhan™</h1>
           </a>
         </div>
         <div class="nav-list">
